fix dark mode support for images & sync system preference

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,33 +1,9 @@
 @tailwind base;
+@import 'antd/dist/antd.css';
 @tailwind components;
 @tailwind utilities;
-@import 'antd/dist/antd.css';
 @import './monokai-sublime.css';
 @import './Search.css';
-.index-container {
-  @apply bg-gray-700;
-  background-image: url(https://ftp.bmp.ovh/imgs/2021/04/04a93a5ed32d1758.webp);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-@screen sm {
-  .index-container {
-    background-image: url(https://ftp.bmp.ovh/imgs/2021/04/a6aee4cfa257e370.webp);
-  }
-}
-.remark-code-title {
-  @apply px-5 py-3 font-mono text-sm font-bold text-gray-200 bg-gray-700 rounded-t;
-}
-
-.remark-code-title + pre {
-  @apply mt-0 rounded-t-none;
-}
-
-.task-list-item:before {
-  @apply hidden;
-}
 
 html {
   scroll-behavior: smooth;
@@ -60,27 +36,9 @@ html {
   select {
     @apply bg-transparent;
   }
-}
-.custom-link:hover::after {
-  content: '';
-  height: 3px;
-  width: 18px;
-  position: absolute;
-  right: 50%;
-  bottom: 0;
-  margin-right: -9px;
-  @apply bg-blue-500 dark:hover:text-blue-400;
-}
-
-.active-link::after {
-  content: '';
-  height: 3px;
-  width: 18px;
-  position: absolute;
-  right: 50%;
-  bottom: 0;
-  margin-right: -9px;
-  @apply bg-blue-500;
+  img {
+    @apply opacity-100 duration-500 ease-in-out dark:opacity-70 dark:hover:opacity-100;
+  }
 }
 
 @layer utilities {
@@ -106,52 +64,95 @@ html {
     @apply bg-opacity-80 dark:bg-opacity-50;
     backdrop-filter: saturate(180%) blur(5px);
   }
-  .dim {
-    filter: brightness(0.8);
-  }
   .link {
     @apply text-blue-500 hover:text-blue-600 dark:hover:text-blue-400;
   }
 }
 
-/* Meta-search custom css */
-.meta-search-bar {
-  width: 584px;
-  max-width: 80vw;
-  margin-bottom: 40px;
-  border-radius: 20px;
-}
-.meta-search-bar * {
-  background: none;
-  color: white;
-  border: none;
-  border-radius: 0.4em;
-  @apply outline-none focus:outline-none;
-}
-.meta-search-bar .ant-input-affix-wrapper-focused {
-  @apply outline-none focus:outline-none;
-}
-.meta-search-bar .ant-input-affix-wrapper,
-.ant-btn {
-  @apply bg-gray-100 dark:bg-gray-800 bg-opacity-40 dark:bg-opacity-50  focus:shadow-xl;
-  backdrop-filter: saturate(180%) blur(5px);
-  height: 40px;
-}
-.meta-search-bar ::placeholder {
-  @apply opacity-70 text-gray-200 dark:text-gray-500;
-}
-.meta-search-bar .ant-btn {
-  @apply bg-gray-100 dark:bg-gray-800 bg-opacity-80 dark:bg-opacity-50;
-}
-.meta-search-bar svg {
-  @apply mb-1 fill-current text-gray-800 dark:text-gray-100;
-}
-#weather > div {
-  display: block;
-  z-index: 3;
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* background: rgba(255, 255, 255, 0.45); */
-  /* backdrop-filter: blur(3px); */
+@layer components {
+  .index-container {
+    background-image: url(https://ftp.bmp.ovh/imgs/2021/04/04a93a5ed32d1758.webp);
+    @apply opacity-100 duration-500 ease-in-out dark:opacity-70;
+  }
+
+  @screen sm {
+    .index-container {
+      background-image: url(https://ftp.bmp.ovh/imgs/2021/04/a6aee4cfa257e370.webp);
+    }
+  }
+
+  .remark-code-title {
+    @apply px-5 py-3 font-mono text-sm font-bold text-gray-200 bg-gray-700 rounded-t;
+  }
+
+  .remark-code-title + pre {
+    @apply mt-0 rounded-t-none;
+  }
+
+  .task-list-item::before {
+    @apply hidden;
+  }
+
+  /* Meta-search custom css */
+  .meta-search-bar {
+    width: 584px;
+    max-width: 80vw;
+    margin-bottom: 40px;
+    border-radius: 20px;
+  }
+  .meta-search-bar * {
+    background: none;
+    color: white;
+    border: none;
+    border-radius: 0.4em;
+    @apply outline-none focus:outline-none;
+  }
+  .meta-search-bar .ant-input-affix-wrapper-focused {
+    @apply outline-none focus:outline-none;
+  }
+  .meta-search-bar .ant-input-affix-wrapper,
+  .ant-btn {
+    @apply bg-gray-100 dark:bg-gray-800 bg-opacity-40 dark:bg-opacity-50  focus:shadow-xl;
+    backdrop-filter: saturate(180%) blur(5px);
+    height: 40px;
+  }
+  .meta-search-bar ::placeholder {
+    @apply opacity-70 text-gray-200 dark:text-gray-500;
+  }
+  .meta-search-bar .ant-btn {
+    @apply bg-gray-100 dark:bg-gray-800 bg-opacity-80 dark:bg-opacity-50;
+  }
+  .meta-search-bar svg {
+    @apply mb-1 fill-current text-gray-800 dark:text-gray-100;
+  }
+  #weather > div {
+    display: block;
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* background: rgba(255, 255, 255, 0.45); */
+    /* backdrop-filter: blur(3px); */
+  }
+  .custom-link:hover::after {
+    content: '';
+    height: 3px;
+    width: 18px;
+    position: absolute;
+    right: 50%;
+    bottom: 0;
+    margin-right: -9px;
+    @apply bg-blue-500 dark:hover:text-blue-400;
+  }
+
+  .active-link::after {
+    content: '';
+    height: 3px;
+    width: 18px;
+    position: absolute;
+    right: 50%;
+    bottom: 0;
+    margin-right: -9px;
+    @apply bg-blue-500;
+  }
 }
